--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,13 @@
 name = "PeriLab"
 uuid = "2ecefcea-59f0-46dd-9cfd-1d2b8cc5f112"
-authors = ["Christian Willberg <christian.willberg@dlr.de>",
-"jan-Timo Hesse <jan-timo.hesse@dlr.de>"]
+authors = ["Christian Willberg <christian.willberg@dlr.de>", "jan-Timo Hesse <jan-timo.hesse@dlr.de>"]
 version = "0.1.0"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+Exodus = "f57ae99e-f805-4780-bdca-96e224be1e5a"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
