--- a/Project.toml
+++ b/Project.toml
@@ -11,4 +11,5 @@ Exodus = "f57ae99e-f805-4780-bdca-96e224be1e5a"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
+Tensorial = "98f94333-fa9f-48a9-ad80-1c66397b2b38"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
