--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,20 @@ test1.e
 Input.yaml
 arg.e
 logfile.log
+src/test_1.e
+test/runtests.jl
+test/tensile_test/tensile_test.yaml
+tmp/test_2.e
+src/ns_Dogbone_2.txt
+src/ns_Dogbone_1.txt
+src/Dogbone.yaml
+src/Dogbone.txt
+src/biggerMesh.txt
+ns_Dogbone_2.txt
+ns_Dogbone_1.txt
+Input.yaml
+Dogbone.yaml
+Dogbone.txt
+biggerMesh.txt
+test/tensile_test/tensile_test.yaml
+Input.yaml
