--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,9 +18,9 @@
   script:
     # Let's run the tests. Substitute `coverage = false` below, if you do not
     # want coverage results.
-    - julia -e 'using Pkg; Pkg.add(PackageSpec(url=pwd())); Pkg.build("PeriLab"); Pkg.test("PeriLab"; coverage = true)'
+    - julia -e 'using Pkg; Pkg.add(Logging); Pkg.add(Random); Pkg.add(PackageSpec(url=pwd())); Pkg.build("PeriLab"); Pkg.test("PeriLab"; coverage = true)'
     # Comment out below if you do not want coverage results.
-    - julia -e 'using Pkg; Pkg.add("Coverage"); 
+    - julia -e 'using Pkg; Pkg.add("Coverage");
       import PeriLab; cd(joinpath(dirname(pathof(PeriLab)), ".."));
       using Coverage; cl, tl = get_summary(process_folder());
       println("(", cl/tl*100, "%) covered")'
@@ -30,7 +30,7 @@
 test:latest:
   image: julia:latest
   <<: *test_definition
-  
+
 # test:1.0:
 #   image: julia:1.0
 #   <<: *test_definition
@@ -64,9 +64,7 @@ pages:
     paths:
       - public
   only:
-  - main
-
-
+    - main
 # WARNING: This template is using the `julia` images from [Docker
 # Hub][3]. One can use custom Julia images and/or the official ones found
 # in the same place. However, care must be taken to correctly locate the binary
