--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ pages:
   stage: deploy
   script:
     - apt-get update -qq && apt-get install -y git # needed by Documenter
-    - julia -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("PeriLab");' # rebuild Julia (can be put somewhere else I'm sure
+    - julia -e 'using Pkg; Pkg.add(PackageSpec(url=pwd())); Pkg.build("PeriLab");' # rebuild Julia (can be put somewhere else I'm sure
     - julia -e 'using Pkg; import PeriLab; Pkg.add("Documenter")' # install Documenter
     - julia --color=yes docs/make.jl # make documentation
     - mv docs/build public # move to the directory picked up by Gitlab pages
