--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@
 # images comes from Docker hub
 test:latest:
   image: julia:latest
+  coverage: '\(\d+.\d+\%\) covered'
   <<: *test_definition
 # test:1.0:
 #   image: julia:1.0
