--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,9 @@
-CompactTension_red.txt
-CompactTension.txt
-JohnsonCook.yaml
-.vscode/
-*.Identifier
-/docs/build/
-think.md
-test_data_exchange.jl
-test_func.jl
-simple_test.jl
-node1.txt
-node2.txt
-exodus_test.jl
-1.e
-src/simpleMesh.txt
-src/Input.yaml
-test2.e
-test1.e
-Input.yaml
-arg.e
-logfile.log
-src/test_1.e
-test/runtests.jl
-test/tensile_test/tensile_test.yaml
-tmp/test_2.e
-src/ns_Dogbone_2.txt
-src/ns_Dogbone_1.txt
-src/Dogbone.yaml
-src/Dogbone.txt
-src/biggerMesh.txt
-ns_Dogbone_2.txt
-ns_Dogbone_1.txt
-Input.yaml
-Dogbone.yaml
-Dogbone.txt
-biggerMesh.txt
-test/tensile_test/tensile_test.yaml
-Input.yaml
 *.log
 *.cov
+./*.yaml
+./*.txt
+./*.e
+./src/*.yaml
+./src/*.txt
+./src/*.e
+*.json
