--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,25 @@
 ./src/*.txt
 ./src/*.e
 *.json
+biggerMesh.txt
+Dogbone_Output1_0.e
+Dogbone.txt
+Dogbone.yaml
+Dogbone2d.txt
+exodus_test.jl
+node1.txt
+node2.txt
+ns_Dogbone_1.txt
+ns_Dogbone_2.txt
+simple_test.jl
+strain_xy_0.e
+strain_xy_1.e
+strain_xy_2.e
+strain_xy_3.e
+strain_xy.yaml
+test_func.jl
+think.md
+test/tensile_test/tensile_test.yaml
+test/test_MPI/strain_xy.yaml
+test/test_MPI/test_mesh.txt
+test/test_PD_Solid_Elastic/strain_yy_0.e
