--- a/Input.yaml
+++ b/Input.yaml
@@ -1,107 +1,105 @@
 PeriLab:
-    Discretization: 
-        Node Sets:
-            Node Set 1: "node1.txt"
-            Node Set 2: "node2.txt"
-        Type: "Text File"
-        Input Mesh File: "simpleMesh.txt"
-        #Input Mesh File: "biggerMesh.txt"
-    Physics:
-        Material Models: 
-            Aluminium: 
-                Material Model: "PD Solid Elastic"
-                #Material Model: "Test"
-                Bulk Modulus: 2.0e5
-                Shear Modulus: 1.0e5
-        Damage Models: 
-            Damage: 
-                Damage Model: "Test"
-    Blocks: 
-        block_1: 
-            Block Names: "block_1"
-            Material Model: "Aluminium"
-            Damage Model: "Damage"
-            Density: 2.7e-9
-            Horizon: 2.7221534653465347
-        block_2: 
-            Block Names: "block_2"
-            Material: "Aluminium"
-            Density: 2.7e-9
-            Horizon: 2.7221534653465347
-        block_3: 
-            Block Names: "block_3"
-            Material: "Aluminium"
-            Density: 2.7e-9
-            Horizon: 2.7221534653465347
-        block_4: 
-            Block Names: "block_4"
-            Material: "Aluminium"
-            Density: 2.7e-9
-            Horizon: 2.7221534653465347
-        block_5: 
-            Block Names: "block_5"
-            Material: "Aluminium"
-            Density: 2.7e-9
-            Horizon: 2.7221534653465347
-    Boundary Conditions: 
-        BC_1: 
-            Type: "Forces"
-            Node Set: "Node Set 1"
-            Coordinate: "y"
-            Value: "20*t"
-        BC_2: 
-            Type: "Forces"
-            Node Set: "Node Set 2"
-            Coordinate: "y"
-            Value: "-20*t"
-        BC_3: 
-            Type: "Displacements"
-            Node Set: "Node Set 1"
-            Coordinate: "x"
-            Value: "0"
-        BC_4: 
-            Type: "Displacements"
-            Node Set: "Node Set 2"
-            Coordinate: "x"
-            Value: "0"
-        BC_5: 
-            Type: "Displacements"
-            Node Set: "Node Set 2"
-            Coordinate: "z"
-            Value: "0"
-    Solver: 
-        Solve For Displacement: True
-        Verbose: False
-        Initial Time: 0.0
-        Final Time: 0.00002
-        Stop after damage initiation: False
-        End step after damage: 3
-        Verlet: 
-            Safety Factor: 1.00
-            Numerical Damping: 5e-06
-            Adapt dt: True
-            Stable Step Difference: 4
-            Maximum Bond Difference: 4
-            Stable Bond Difference: 1
-    Compute Class Parameters: 
-        External_Force: 
-            Compute Class: "Block_Data"
-            Calculation Type: "Sum"
-            Block: "block_2"
-            Variable: "Force"
-            Output Label: "External_Force"
-        External_Displacement: 
-            Compute Class: "Block_Data"
-            Calculation Type: "Maximum"
-            Block: "block_2"
-            Variable: "Displacement"
-            Output Label: "External_Displacement"
-    Outputs: 
-        Output1:
-            Output Filename: "test_1"
-            Output Frequency: 40
-            Output Variables: 
-                Displacements: True
-                Volume: True
-            
-
+  Discretization:
+    Node Sets:
+      Node Set 1: 1 5 9
+      Node Set 2: 4 8 12
+    Type: "Text File"
+    Input Mesh File: "simpleMesh.txt"
+    #Input Mesh File: "biggerMesh.txt"
+  Physics:
+    Material Models:
+      Aluminium:
+        Material Model: "PD Solid Elastic"
+        #Material Model: "Test"
+        Bulk Modulus: 2.0e5
+        Shear Modulus: 1.0e5
+    Damage Models:
+      Damage:
+        Damage Model: "Test"
+  Blocks:
+    block_1:
+      Block Names: "block_1"
+      Material Model: "Aluminium"
+      Damage Model: "Damage"
+      Density: 2.7e-9
+      Horizon: 2.7221534653465347
+    block_2:
+      Block Names: "block_2"
+      Material: "Aluminium"
+      Density: 2.7e-9
+      Horizon: 2.7221534653465347
+    block_3:
+      Block Names: "block_3"
+      Material: "Aluminium"
+      Density: 2.7e-9
+      Horizon: 2.7221534653465347
+    block_4:
+      Block Names: "block_4"
+      Material: "Aluminium"
+      Density: 2.7e-9
+      Horizon: 2.7221534653465347
+    block_5:
+      Block Names: "block_5"
+      Material: "Aluminium"
+      Density: 2.7e-9
+      Horizon: 2.7221534653465347
+  Boundary Conditions:
+    BC_1:
+      Type: "Forces"
+      Node Set: "Node Set 1"
+      Coordinate: "y"
+      Value: "20*t"
+    BC_2:
+      Type: "Forces"
+      Node Set: "Node Set 2"
+      Coordinate: "y"
+      Value: "-20*t"
+    BC_3:
+      Type: "Displacements"
+      Node Set: "Node Set 1"
+      Coordinate: "x"
+      Value: "0"
+    BC_4:
+      Type: "Displacements"
+      Node Set: "Node Set 2"
+      Coordinate: "x"
+      Value: "0"
+    BC_5:
+      Type: "Displacements"
+      Node Set: "Node Set 2"
+      Coordinate: "z"
+      Value: "0"
+  Solver:
+    Solve For Displacement: True
+    Verbose: False
+    Initial Time: 0.0
+    Final Time: 0.00002
+    Stop after damage initiation: False
+    End step after damage: 3
+    Verlet:
+      Safety Factor: 1.00
+      Numerical Damping: 5e-06
+      Adapt dt: True
+      Stable Step Difference: 4
+      Maximum Bond Difference: 4
+      Stable Bond Difference: 1
+  Compute Class Parameters:
+    External_Force:
+      Compute Class: "Block_Data"
+      Calculation Type: "Sum"
+      Block: "block_2"
+      Variable: "Force"
+      Output Label: "External_Force"
+    External_Displacement:
+      Compute Class: "Block_Data"
+      Calculation Type: "Maximum"
+      Block: "block_2"
+      Variable: "Displacement"
+      Output Label: "External_Displacement"
+  Outputs:
+    Output1:
+      Output Filename: "test_1"
+      Output Frequency: 40
+      Output Variables:
+        Displacements: True
+        Volume: True
