--- a/Input.yaml
+++ b/Input.yaml
@@ -7,15 +7,28 @@ PeriLab:
     Input Mesh File: "simpleMesh.txt"
     #Input Mesh File: "biggerMesh.txt"
     Bond Filters:
+      # bf_1:
+      #   Type: "Disk"
+      #   Normal_X: 0.0
+      #   Normal_Y: 1.0
+      #   Normal_Z: 0.0
+      #   Center_X: 0.0
+      #   Center_Y: 1.5
+      #   Center_Z: 0.0
+      #   Radius: 5.0
       bf_1:
-        Type: "Disk"
+        Type: "Rectangular_Plane"
         Normal_X: 0.0
         Normal_Y: 1.0
         Normal_Z: 0.0
-        Center_X: 0.0
-        Center_Y: 1.5
-        Center_Z: 0.0
-        Radius: 5.0
+        Lower_Left_Corner_X: -0.5
+        Lower_Left_Corner_Y: 0.0
+        Lower_Left_Corner_Z: -1.0
+        Bottom_Unit_Vector_X: 1.0
+        Bottom_Unit_Vector_Y: 0.0
+        Bottom_Unit_Vector_Z: 0.0
+        Bottom_Length: 56.75
+        Side_Length: 2.0
   Physics:
     Material Models:
       Aluminium:
