--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,26 @@ Dogbone_Output1_5.e
 Dogbone_Output1_6.e
 Dogbone_Output1_7.e
 Dogbone_Output1.e
+Dogbone_Output1.e.2.0
+Dogbone_Output1.e.2.1
+Dogbone_Output1.e.3.0
+Dogbone_Output1.e.3.1
+Dogbone_Output1.e.3.2
+Dogbone_Output1.e.4.0
+Dogbone_Output1.e.4.1
+Dogbone_Output1.e.4.2
+Dogbone_Output1.e.4.3
+Dogbone_Output1.e.8.0
+Dogbone_Output1.e.8.1
+Dogbone_Output1.e.8.2
+Dogbone_Output1.e.8.3
+Dogbone_Output1.e.8.4
+Dogbone_Output1.e.8.5
+Dogbone_Output1.e.8.6
+Dogbone_Output1.e.8.7
+Neues Textdokument.txt
+refDog.e
+strain_yy.e.4.0
+strain_yy.e.4.1
+strain_yy.e.4.2
+strain_yy.e.4.3
