--- a/Example/functionalities.yaml
+++ b/Example/functionalities.yaml
@@ -9,6 +9,11 @@ PeriLab:
             b1:
                 
     Physics:
+        Calculate Deformed Bond Geometry: true
+        Calculate Deformation Gradient: false
+        Calculate Shape Tensor: false
+        Calculate Bond Associated Shape Tensor: false
+        Calculate Bond Associated Deformation Gradient: false
         Material Models: 
             Mat_1: 
                 Material Model: "PD Solid Elastic"
