--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,13 @@
 image: julia:latest
 
 stages:
-  - setup
   - test
   - deploy
 
-setup:
-  stage: setup
-  script:
-    # workaround for https://github.com/JuliaDocs/Documenter.jl/issues/686
-    - apt-get -qq update; apt-get -y install git
-    - julia --project=@. -e "import Pkg; Pkg.build()"
+before_script:
+  # workaround for https://github.com/JuliaDocs/Documenter.jl/issues/686
+  - apt-get -qq update; apt-get -y install git
+  - julia --project=@. -e "import Pkg; Pkg.build()"
 
 test:
   stage: test
