--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,9 @@ before_script:
 benchmark:
   stage: test
   script:
-    - julia -e 'import Pkg; Pkg.activate(".")'
-    - julia -e 'import Pkg; Pkg.instantiate()'
-    - julia test/benchmarks/benchmark.jl
+    - julia --project=@. -e 'import Pkg; Pkg.activate(".")'
+    - julia --project=@. -e 'import Pkg; Pkg.instantiate()'
+    - julia --project=@. test/benchmarks/benchmark.jl
   artifacts:
     paths:
       - benchmark_results.json
