--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,8 @@ before_script:
 benchmark:
   stage: test
   script:
-    - julia --project=@. -e 'import Pkg; Pkg.activate(".")'
-    - julia --project=@. -e 'import Pkg; Pkg.instantiate()'
+    - julia --project=@. -e 'import PeriLab'
+    # - julia --project=@. -e 'import Pkg; Pkg.instantiate()'
     - julia --project=@. test/benchmarks/benchmark.jl
   artifacts:
     paths:
