--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tensorial = "98f94333-fa9f-48a9-ad80-1c66397b2b38"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
