--- a/test/tensile_test/tensile_test.yaml
+++ b/test/tensile_test/tensile_test.yaml
@@ -16,15 +16,15 @@ Peridigm:
 #       divided by the initial cross-sectional area.
 #
 #     Units are CGS
-#       mass          g
-#       length        cm
+#       mass          kg
+#       length        m
 #       time          s
-#       density       g/cm^3
-#       force         dyne
-#       pressure      dyne/cm^2
-#       velocity      cm/s
-#       acceleration  cm/s^2
-#       energy        erg
+#       density       kg/m^3
+#       force         N
+#       pressure      N/m^2
+#       velocity      m/s
+#       acceleration  m/s^2
+#       energy        Nm
 
   Verbose: false
   Discretization:
