--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,14 +75,13 @@ pages:
     refs:
       - main
   script:
+    - julia -e 'import Pkg; Pkg.add(path=".")'
     - julia --project=docs -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
     - julia --project=docs --color=yes docs/make.jl
     - mv docs/build public # move to the directory picked up by Gitlab pages
   artifacts:
     paths:
       - public
-  only:
-    - main
 
 .deploy_before_script_template:
   image: docker:latest
