--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ pages:
       - main
   script:
     # - julia -e 'import Pkg; Pkg.add(path=".")' # i think this is to much, tbd
-    - julia --project=docs -e 'using Pkg; Pkg.add("Documenter"); Pkg.add("DocumenterCitations")'
+    - julia --project=docs -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
     - julia --project=docs --color=yes docs/make.jl
     - mv docs/build public # move to the directory picked up by Gitlab pages
   artifacts:
