fixed test packages

--- a/Project.toml
+++ b/Project.toml
@@ -30,4 +30,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
 [targets]
-test = ["Aqua", "Test", "TestSetExtensions"]
+test = ["Aqua", "Logging", "MPI", "Test", "TestSetExtensions"]
