--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,6 @@ test/tryout/macro_test_zone/combineModules.jl
 test/tryout/macro_test_zone/combineModulesMacro.jl
 test/tryout/macro_test_zone/Modules/moduleB.jl
 test/tryout/macro_test_zone/Modules/modA/moduleA.jl
+test/tryout/correspondence_strain_pstress_xx_zc.e
+test/tryout/correspondence_strain_pstress_yy_hg.e
+test/tryout/correspondence_strain_pstress_zc_xx.yaml
