--- a/.gitignore
+++ b/.gitignore
@@ -2,89 +2,12 @@
 #
 # SPDX-License-Identifier: BSD-3-Clause
 
+*.vscode
 *.log
 *.cov
-./*.yaml
-./*.e
-./src/*.yaml
-./src/*.txt
-./src/*.e
-*.json
 *build/
 Manifest.toml
-biggerMesh.txt
-Dogbone_Output1_0.e
-Dogbone.txt
-Dogbone.yaml
-Dogbone2d.txt
-exodus_test.jl
-node1.txt
-node2.txt
-ns_Dogbone_1.txt
-ns_Dogbone_2.txt
-simple_test.jl
-strain_xy_0.e
-strain_xy_1.e
-strain_xy_2.e
-strain_xy_3.e
-test_func.jl
-think.md
-test/tensile_test/tensile_test.yaml
-test/test_MPI/strain_xy.yaml
-test/test_MPI/test_mesh.txt
-test/test_PD_Solid_Elastic/strain_yy_0.e
-Dogbone_Output1_1.e
-Dogbone_Output1_2.e
-Dogbone_Output1_3.e
-Dogbone_Output1_4.e
-Dogbone_Output1_5.e
-Dogbone_Output1_6.e
-Dogbone_Output1_7.e
-Dogbone_Output1.e
-Dogbone_Output1.e.2.0
-Dogbone_Output1.e.2.1
-Dogbone_Output1.e.3.0
-Dogbone_Output1.e.3.1
-Dogbone_Output1.e.3.2
-Dogbone_Output1.e.4.0
-Dogbone_Output1.e.4.1
-Dogbone_Output1.e.4.2
-Dogbone_Output1.e.4.3
-Dogbone_Output1.e.8.0
-Dogbone_Output1.e.8.1
-Dogbone_Output1.e.8.2
-Dogbone_Output1.e.8.3
-Dogbone_Output1.e.8.4
-Dogbone_Output1.e.8.5
-Dogbone_Output1.e.8.6
-Dogbone_Output1.e.8.7
-Neues Textdokument.txt
-refDog.e
-strain_yy.e.4.0
-strain_yy.e.4.1
-strain_yy.e.4.2
-strain_yy.e.4.3
-strain.yaml
-test_data_exchange.jl
-test/multifunctional_test/test_MPI_data_manager.jl
-test/tensile_test/tensile_test.yaml
-test/test_PD_Solid_Elastic/strain_yy.e
-test/tryout/critical_stretch_pressure.e
-test/tryout/critical_stretch_pressure.yaml
-test/tryout/critical_stretch_tension.e
-test/tryout/critical_stretch_tension.yaml
-test/tryout/strain_yy.e
-test/multifunctional_test/test_MPI_data_manager.jl
-test/tensile_test/tensile_test.yaml
-src/Physics/Material/material_basis.jl
-test/tryout/test_mesh.txt
-test/tryout/test.yaml
-test/tryout/correspondence_strain_xx_hg.e
-test/tryout/macro_test_zone/call.jl
-test/tryout/macro_test_zone/combineModules.jl
-test/tryout/macro_test_zone/combineModulesMacro.jl
-test/tryout/macro_test_zone/Modules/moduleB.jl
-test/tryout/macro_test_zone/Modules/modA/moduleA.jl
-test/tryout/correspondence_strain_pstress_xx_zc.e
-test/tryout/correspondence_strain_pstress_yy_hg.e
-test/tryout/correspondence_strain_pstress_zc_xx.yaml
+*.e*
+!**/Reference/*.e*
+
+test/tryout/
